--- a/package.json
+++ b/package.json
@@ -13,15 +13,21 @@
   "dependencies": {
     "@headlessui/react": "^2.1.2",
     "@reduxjs/toolkit": "^2.2.7",
+    "@shopify/storefront-api-client": "^1.0.3",
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.7.2",
     "concurrently": "^8.2.2",
+    "i18next": "^24.2.1",
+    "i18next-browser-languagedetector": "^8.0.2",
     "json-server": "^1.0.0-beta.1",
+    "lucide-react": "^0.471.0",
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^15.4.0",
     "react-icons": "^5.2.1",
+    "react-intl": "^7.1.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "swiper": "^11.1.15"
